<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/global_notify"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#131313"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/content_warp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:background="#00FFFFFF"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/shape_warp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_corner"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_corner"
                android:contentDescription="@string/video_avatar"
                android:scaleType="fitXY"
                android:src="@drawable/jay11" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/music_title"
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="15dp"
                        android:text="@string/music_name"
                        android:textColor="#fff"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/close_dialog"
                        android:layout_width="44dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/close_icon"
                        android:paddingTop="5dp"
                        android:src="@android:drawable/ic_delete" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/previous"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/previous"
                        android:src="@android:drawable/ic_media_previous" />

                    <ImageButton
                        android:id="@+id/play"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/play"
                        android:src="@android:drawable/ic_media_play" />

                    <ImageButton
                        android:id="@+id/next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00FFFFFF"
                        android:contentDescription="@string/next"
                        android:src="@android:drawable/ic_media_next" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>